--- a/package.json
+++ b/package.json
@@ -3,9 +3,9 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev -p 10000",
+    "dev": "next dev -p 10000 -H 127.0.0.1",
     "build": "next build",
-    "start": "next start -p 10000",
+    "start": "next start -p 10000 -H 127.0.0.1",
     "lint": "next lint"
   },
   "dependencies": {
